==> atomvm/AtomVM/src/platforms/stm32/src/lib/gpio_driver.c <==
#include <stdbool.h>
#include <string.h>
#include <libopencm3/cm3/nvic.h>
#include <libopencm3/stm32/exti.h>
#include <libopencm3/stm32/gpio.h>
#include <atom.h>
#include <bif.h>
#include <context.h>
#include <defaultatoms.h>
#include <globalcontext.h>
#include <interop.h>
#include <mailbox.h>
#include <nifs.h>
#include <port.h>
#include <scheduler.h>
#include <sys.h>
#include <term.h>
#include <trace.h>
#include "avm_log.h"
#include "gpio_driver.h"
#include "stm_sys.h"
#define TAG "gpio_driver"
#define GPIO_MODE_OUTPUT_OD 0x4
#define GPIOInvalidBank 0x0000U
#define GPIO_INVALID_MODE 0xE
#define INVALID_GPIO_OSPEED 0xE
#define INVALID_EXTI_TRIGGER 0xEE

static term gpio_digital_write(Context *ctx, term gpio_pin_tuple, term level_term)
{
    if (UNLIKELY(!term_is_tuple(gpio_pin_tuple))) {
        AVM_LOGE(TAG, "Invalid GPIO Pin tuple, expect {Bank, Pin}.");
        return error_tuple_maybe_gc(ctx, BADARG_ATOM);
    }
    term gpio_bank_atom = term_get_tuple_element(gpio_pin_tuple, 0);
    if (UNLIKELY(!term_is_atom(gpio_bank_atom))) {
        AVM_LOGE(TAG, "Bank parameter of pin tuple must be an atom!");
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }

    uint32_t gpio_bank = ((uint32_t) interop_atom_term_select_int(gpio_bank_table, gpio_bank_atom, ctx->global));
    if (UNLIKELY(gpio_bank == GPIOInvalidBank)) {
        char *bank_string = interop_atom_to_string(ctx, gpio_bank_atom);
        AVM_LOGE(TAG, "Invalid GPIO Bank '%s' in pin tuple", bank_string);
        free(bank_string);
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }

    term pin_term = term_get_tuple_element(gpio_pin_tuple, 1);
    uint16_t gpio_pin_mask = 0x0000U;
    if (term_is_list(pin_term)) {
        if (UNLIKELY(!term_is_nonempty_list(pin_term))) {
            AVM_LOGE(TAG, "Pin list parameter contains no pin numbers!");
            return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
        }
        while (term_is_nonempty_list(pin_term)) {
            term gpio_pin_term = term_get_list_head(pin_term);
            if (UNLIKELY(!term_is_integer(gpio_pin_term))) {
                return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
            }
            uint16_t gpio_pin_num = ((uint16_t) term_to_int32(gpio_pin_term));
            if (UNLIKELY(gpio_pin_num > 15)) {
                AVM_LOGE(TAG, "Pin numbers must be between 0 and 15!");
                return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
            }
            gpio_pin_mask = 1U << gpio_pin_num | gpio_pin_mask;
            pin_term = term_get_list_tail(pin_term);
        }
    } else if (term_is_integer(pin_term)) {
        uint16_t gpio_pin_num = ((uint16_t) term_to_int32(pin_term));
        if (UNLIKELY(gpio_pin_num > 15)) {
            AVM_LOGE(TAG, "Pin number must be between 0 and 15!");
            return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
        } else {
            gpio_pin_mask = 1U << gpio_pin_num | gpio_pin_mask;
        }
    } else if (term_is_atom(pin_term)) {
        if (UNLIKELY(pin_term != ALL_ATOM)) {

            AVM_LOGE(TAG, "Pin number must be between 0 and 15!");
            return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
        }
        gpio_pin_mask = GPIO_ALL;
    } else {
        return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
    }

    int level;
    if (term_is_integer(level_term)) {
        level = term_to_int(level_term);
        if (UNLIKELY((level != 0) && (level != 1))) {
            return error_tuple_str_maybe_gc(ctx, invalid_level_atom);
        }
    } else {
        if (UNLIKELY(!term_is_atom(level_term))) {
            AVM_LOGE(TAG, "GPIO level must be 0 or 1, or an atom ('high' or 'low').");
            return error_tuple_str_maybe_gc(ctx, invalid_level_atom);
        }
        level = interop_atom_term_select_int(pin_level_table, level_term, ctx->global);
        if (UNLIKELY(level < 0)) {
            AVM_LOGE(TAG, "GPIO level atom must be 'high' or 'low'.");
            return error_tuple_str_maybe_gc(ctx, invalid_level_atom);
        }
    }

    if (level != 0) {
        gpio_set(gpio_bank, gpio_pin_mask);
    } else {
        gpio_clear(gpio_bank, gpio_pin_mask);
    }
    TRACE("Write: bank: 0x%08lX, pin mask: 0x%04X, level: %i\n", gpio_bank, gpio_pin_mask, level);
    return OK_ATOM;
}

static term gpio_digital_read(Context *ctx, term gpio_pin_tuple)
{
    if (UNLIKELY(!term_is_tuple(gpio_pin_tuple))) {
        AVM_LOGE(TAG, "Invalid GPIO Pin tuple, expect {Bank, Pin}.");
        return error_tuple_maybe_gc(ctx, BADARG_ATOM);
    }
    term gpio_bank_atom = term_get_tuple_element(gpio_pin_tuple, 0);
    if (UNLIKELY(!term_is_atom(gpio_bank_atom))) {
        AVM_LOGE(TAG, "Bank parameter of pin tuple must be an atom!");
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }
    uint32_t gpio_bank = ((uint32_t) interop_atom_term_select_int(gpio_bank_table, gpio_bank_atom, ctx->global));

    if (UNLIKELY(gpio_bank == GPIOInvalidBank)) {
        char *bank_string = interop_atom_to_string(ctx, gpio_bank_atom);
        AVM_LOGE(TAG, "Invalid GPIO Bank '%s' in pin tuple", bank_string);
        free(bank_string);
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }
    // TODO: Add support for reading list, or all input pins on port?
    uint16_t gpio_pin_num = ((uint16_t) term_to_int32(term_get_tuple_element(gpio_pin_tuple, 1)));
    if (UNLIKELY(gpio_pin_num > 15)) {
        AVM_LOGE(TAG, "Pin number must be between 0 and 15!");
        return error_tuple_str_maybe_gc(ctx, invalid_pin_atom);
    }

    uint16_t pin_levels = gpio_get(gpio_bank, (1U << gpio_pin_num));
    uint16_t level = (pin_levels >> gpio_pin_num);
    TRACE("Read: Bank 0x%08lX Pin %u. RESULT: %u\n", gpio_bank, gpio_pin_num, level);

    return level_to_atom(ctx, level);
}

static term gpiodriver_close(Context *ctx)
{
    GlobalContext *glb = ctx->global;
    term gpio_atom_term = globalcontext_make_atom(glb, gpio_atom);
    int gpio_atom_index = term_to_atom_index(gpio_atom_term);
    if (UNLIKELY(!globalcontext_get_registered_process(glb, gpio_atom_index))) {
        AVM_LOGE(TAG, "No active GPIO driver can be found.");
        return error_tuple_maybe_gc(ctx, NOPROC_ATOM);
    }

    struct GPIOData *gpio_data = ctx->platform_data;
    struct ListHead *item;
    struct ListHead *tmp;
    if (!list_is_empty(&gpio_data->gpio_listeners)) {
        MUTABLE_LIST_FOR_EACH (item, tmp, &gpio_data->gpio_listeners) {
            struct GPIOListenerData *gpio_listener = GET_LIST_ENTRY(item, struct GPIOListenerData, gpio_listener_list_head);
            uint32_t exti = gpio_listener->exti;
            uint8_t irqn = pin_num_to_exti_irq(gpio_listener->gpio_pin);
            nvic_disable_irq(irqn);
            exti_disable_request(exti);
            list_remove(&gpio_listener->gpio_listener_list_head);
            free(gpio_listener);
        }
    }

    globalcontext_unregister_process(glb, gpio_atom_index);
    free(gpio_data);

    return OK_ATOM;
}

void gpio_interrupt_callback(Context *ctx, uint32_t exti)
{
    int32_t listening_pid;
    term gpio_bank;
    uint16_t gpio_pin;

    struct GPIOData *gpio_data = ctx->platform_data;
    struct ListHead *item;
    LIST_FOR_EACH (item, &gpio_data->gpio_listeners) {
        struct GPIOListenerData *gpio_listener = GET_LIST_ENTRY(item, struct GPIOListenerData, gpio_listener_list_head);
        if (gpio_listener->exti == exti) {
            listening_pid = gpio_listener->target_local_pid;
            gpio_bank = gpio_listener->bank_atom;
            gpio_pin = gpio_listener->gpio_pin;

            BEGIN_WITH_STACK_HEAP(TUPLE_SIZE(2) + TUPLE_SIZE(2), heap);

            term int_msg = term_alloc_tuple(2, &heap);
            term gpio_tuple = term_alloc_tuple(2, &heap);
            term_put_tuple_element(int_msg, 0, globalcontext_make_atom(ctx->global, gpio_interrupt_atom));
            term_put_tuple_element(gpio_tuple, 0, gpio_bank);
            term_put_tuple_element(gpio_tuple, 1, term_from_int32((int32_t) gpio_pin));
            term_put_tuple_element(int_msg, 1, gpio_tuple);

            globalcontext_send_message(ctx->global, listening_pid, int_msg);

            END_WITH_STACK_HEAP(heap, ctx->global);
        }
    }
}

static term gpiodriver_set_direction(Context *ctx, term cmd)
{
    term gpio_tuple = term_get_tuple_element(cmd, 1);
    term direction = term_get_tuple_element(cmd, 2);

    return setup_gpio_pin(ctx, gpio_tuple, direction);
}

static term gpiodriver_set_int(Context *ctx, int32_t target_pid, term cmd)
{
    int32_t target_local_pid;

    term gpio_tuple = term_get_tuple_element(cmd, 1);
    if (UNLIKELY(!term_is_tuple(gpio_tuple))) {
        AVM_LOGE(TAG, "Invalid GPIO Pin tuple, expect {Bank, Pin}.");
        return error_tuple_maybe_gc(ctx, BADARG_ATOM);
    }
    term gpio_bank_atom = term_get_tuple_element(gpio_tuple, 0);
    if (UNLIKELY(!term_is_atom(gpio_bank_atom))) {
        AVM_LOGE(TAG, "Bank parameter of pin tuple must be an atom!");
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }
    uint32_t gpio_bank = (uint32_t) interop_atom_term_select_int(gpio_bank_table, gpio_bank_atom, ctx->global);
    if (UNLIKELY(gpio_bank == GPIOInvalidBank)) {
        char *bank_string = interop_atom_to_string(ctx, gpio_bank_atom);
        AVM_LOGE(TAG, "Invalid GPIO bank '%s' in pin tuple", bank_string);
        free(bank_string);
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }

    uint16_t gpio_pin = (uint16_t) term_to_int32(term_get_tuple_element(gpio_tuple, 1));

    struct GPIOData *gpio_data = ctx->platform_data;
    if (gpiodriver_is_gpio_attached(gpio_data, gpio_bank_atom, gpio_pin)) {
        char *bank_string = interop_atom_to_string(ctx, gpio_bank_atom);
        AVM_LOGW(TAG, "GPIO pin %s%u interrupt already attached.", bank_string, gpio_pin);
        free(bank_string);
        return OK_ATOM;
    }

    term trigger = term_get_tuple_element(cmd, 2);
    if (UNLIKELY(!term_is_atom(trigger))) {
        AVM_LOGE(TAG, "GPIO interrupt trigger must be an atom ('rising', 'falling', or 'both').");
        return error_tuple_str_maybe_gc(ctx, invalid_trigger_atom);
    }
    enum exti_trigger_type interrupt_type = interop_atom_term_select_int(exti_trigger_table, trigger, ctx->global);
    if (UNLIKELY(interrupt_type == INVALID_EXTI_TRIGGER)) {
        char *trigger_string = interop_atom_to_string(ctx, trigger);
        AVM_LOGE(TAG, "Interrupt type %s not supported on stm32 platform.", trigger_string);
        free(trigger_string);
        return error_tuple_str_maybe_gc(ctx, invalid_trigger_atom);
    }

    if (term_get_tuple_arity(cmd) == 4) {
        term pid = term_get_tuple_element(cmd, 3);
        if (UNLIKELY(!term_is_pid(pid) && !term_is_atom(pid))) {
            AVM_LOGE(TAG, "Invalid listener parameter, must be a pid() or registered process!");
            return create_pair(ctx, ERROR_ATOM, invalid_listener_atom);
        }
        if (term_is_pid(pid)) {
            target_local_pid = term_to_local_process_id(pid);
        } else {
            int pid_atom_index = term_to_atom_index(pid);
            int32_t registered_process = (int32_t) globalcontext_get_registered_process(ctx->global, pid_atom_index);
            if (UNLIKELY(registered_process == 0)) {
                AVM_LOGE(TAG, "Invalid listener parameter, atom() is not a registered process name!");
                return create_pair(ctx, ERROR_ATOM, NOPROC_ATOM);
            }
            target_local_pid = registered_process;
        }
    } else {
        target_local_pid = target_pid;
    }

    uint32_t exti = 1U << gpio_pin;

    if (!list_is_empty(&gpio_data->gpio_listeners)) {
        struct ListHead *item;
        LIST_FOR_EACH (item, &gpio_data->gpio_listeners) {
            struct GPIOListenerData *gpio_listener = GET_LIST_ENTRY(item, struct GPIOListenerData, gpio_listener_list_head);
            if (gpio_listener->exti == exti) {
                char *bank_string = interop_atom_to_string(ctx, gpio_bank_atom);
                AVM_LOGE(TAG, "Cannot set interrupt for pin %s%u, exti%u device already in use!", bank_string, gpio_pin, gpio_pin);
                free(bank_string);
                return error_tuple_str_maybe_gc(ctx, invalid_irq_atom);
            }
        }
    }

    uint8_t exti_irq = pin_num_to_exti_irq(gpio_pin);
    if (UNLIKELY(exti_irq == 0)) {
        AVM_LOGE(TAG, "BUG: No valid exti irq found!");
        return error_tuple_str_maybe_gc(ctx, invalid_irq_atom);
    }

    struct GPIOListenerData *data = malloc(sizeof(struct GPIOListenerData));
    if (IS_NULL_PTR(data)) {
        AVM_LOGE(TAG, "Out of memory!");
        AVM_ABORT();
    }
    list_append(&gpio_data->gpio_listeners, &data->gpio_listener_list_head);
    data->target_local_pid = target_local_pid;
    data->bank_atom = gpio_bank_atom;
    data->gpio_pin = gpio_pin;
    data->exti = exti;
    data->exti_irq = exti_irq;

    AVM_LOGD(TAG, "Installing interrupt type 0x%02X with exti%u for bank 0x%08lX pin %u.", interrupt_type, gpio_pin, gpio_bank, gpio_pin);

    exti_disable_request(exti);
    exti_select_source(exti, gpio_bank);
    exti_set_trigger(exti, interrupt_type);
    // Store the Context pointer in the isr_handler
    isr_handler(ctx, 0x0000U);
    exti_enable_request(exti);
    if (!nvic_get_irq_enabled(exti_irq)) {
        nvic_enable_irq(exti_irq);
    }
    nvic_set_priority(exti_irq, 1);

    return OK_ATOM;
}

static term gpiodriver_remove_int(Context *ctx, term cmd)
{
    term gpio_tuple = term_get_tuple_element(cmd, 1);
    if (UNLIKELY(!term_is_tuple(gpio_tuple))) {
        AVM_LOGE(TAG, "Invalid GPIO Pin tuple, expect {Bank, Pin}.");
        return error_tuple_maybe_gc(ctx, BADARG_ATOM);
    }
    term target_bank_atom = term_get_tuple_element(gpio_tuple, 0);
    if (UNLIKELY(!term_is_atom(target_bank_atom))) {
        AVM_LOGE(TAG, "Bank parameter of pin tuple must be an atom!");
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }
    uint32_t target_bank = (uint32_t) interop_atom_term_select_int(gpio_bank_table, target_bank_atom, ctx->global);
    if (UNLIKELY(target_bank == GPIOInvalidBank)) {
        char *bank_string = interop_atom_to_string(ctx, target_bank_atom);
        AVM_LOGE(TAG, "Invalid GPIO bank %s in pin tuple", bank_string);
        free(bank_string);
        return error_tuple_str_maybe_gc(ctx, invalid_bank_atom);
    }
    uint16_t target_num = (uint16_t) term_to_int32(term_get_tuple_element(gpio_tuple, 1));
    uint8_t target_irq = pin_num_to_exti_irq(target_num);

    bool stop_irq = true;
    bool int_removed = false;
    struct GPIOData *gpio_data = ctx->platform_data;
    struct ListHead *item;
    struct ListHead *tmp;
    if (!list_is_empty(&gpio_data->gpio_listeners)) {
        MUTABLE_LIST_FOR_EACH (item, tmp, &gpio_data->gpio_listeners) {
            struct GPIOListenerData *gpio_listener = GET_LIST_ENTRY(item, struct GPIOListenerData, gpio_listener_list_head);
            if ((gpio_listener->gpio_pin == target_num) && (gpio_listener->bank_atom == target_bank_atom)) {
                uint16_t exti = gpio_listener->exti;
                uint8_t irqn = pin_num_to_exti_irq(gpio_listener->gpio_pin);
                nvic_disable_irq(irqn);
                list_remove(&gpio_listener->gpio_listener_list_head);
                exti_disable_request(exti);
                free(gpio_listener);
                int_removed = true;
                // some pins share irqs - don't stop the irq if another pin is still using it.
            } else if (gpio_listener->exti_irq == target_irq) {
                stop_irq = false;
            }
        }
        if (stop_irq) {
            nvic_disable_irq(target_irq);
        }
        if (int_removed == false) {
            AVM_LOGW(TAG, "No interrupt removed, match not found for bank 0x%08lX pin %u.", target_bank, target_num);
        }
    } else {
        AVM_LOGW(TAG, "No interrupts have been previously set.");
    }

    return OK_ATOM;
}
